updates to add better exclusion list style

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>SlowMeDown</title>
   <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
-  <h2>SlowMeDown</h2>
-  <label><input type="checkbox" id="enableToggle"> Enable Slowdown</label>
-  <div>
-    <input type="text" id="domainInput" placeholder="Add domain to exclude">
-    <button id="addDomain">Add</button>
+  <div class="title-bar">
+    <div class="title-bar-text">Dial_Up</div>
+    <div class="title-bar-controls">
+      <button aria-label="Help"></button>
+    </div>
   </div>
-  <ul id="domainList"></ul>
+  <div style="padding: 1em">
+    <div style="margin: 12px 0;">
+      <label for="delaySlider">Delay for this domain: <span id="delayValue"
+          style="margin-right: 0.5ex; margin-left: 0.5ex;">3</span> seconds</label>
+      <input type="range" id="delaySlider" min="0" max="15" value="3">
+    </div>
+
+    <h5 style="margin-bottom: 0">Exclusions</h5>
+    <div class="sunken-panel" style="width: 100%;">
+      <table id="domainList" class="interactive" style="width: 100%">
+        <tbody></tbody>
+      </table>
+    </div>
+    <div>
+      <input type="text" id="domainInput" placeholder="Add domain to exclude">
+      <button id="addDomain">Add</button>
+    </div>
+  </div>
   <script src="popup.js"></script>
 </body>
+
 </html>
