feat: Options for Legal / About page

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -29,6 +29,9 @@
         <tbody></tbody>
       </table>
     </div>
+
+    <div style="margin-top: 1em; text-align: right;">
+      <a href="#" id="legal">Legal &amp; Open Source</a>
   </div>
   <script src="popup.js"></script>
 </body>
